--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,4 +89,6 @@ dependencies {
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation("com.google.firebase:firebase-auth")
+    //implementation 'com.google.gms:google-services:4.3.10'
 }
+//apply plugin: 'com.google.gms.google-services'
