--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,13 +51,16 @@ android {
         multiDexEnabled true
     }
 
-//    buildTypes {
-//        release {
-//            // TODO: Add your own signing config for the release build.
-//            // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig signingConfigs.debug
-//        }
-//    }
+//   buildTypes {
+//     release {
+//         // TODO: Add your own signing config for the release build.
+//         // Signing with the debug keys for now, so `flutter run --release` works.
+//         signingConfig signingConfigs.debug
+//         // minifyEnabled true  // Use this line to enable ProGuard
+//         // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//     }
+// }
+
 
     signingConfigs {
         release {
