--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   firebase_analytics: ^10.6.2
   qr_flutter: ^4.1.0
   qr_code_scanner: ^1.0.1
+  razorpay_flutter: ^1.3.5
+  flutter_spinbox: ^0.13.1
   
 
 dev_dependencies: 
